--- a/about.html
+++ b/about.html
@@ -9,9 +9,9 @@
 <body>
     <header>
         <div id="logotiphead">
-            <a href="./main.html"><img src="./logo.png" /></a>
+            <a href="./index.html"><img src="./logo.png" /></a>
             <div id="nameofsite">
-                <a href="./main.html"><p>МЕГАПОЛИС</p></a>
+                <a href="./index.html"><p>МЕГАПОЛИС</p></a>
             </div>
         </div>
         <div id="addhead">
@@ -37,7 +37,7 @@
         </div>
         <div id="menu">
             <ul class="menuspi close">
-                <a href="./main.html"><li>Главная</li></a>
+                <a href="./index.html"><li>Главная</li></a>
                 <a href="./about.html"><li>О нас</li></a>
                 <a href="./contacts.html"><li>Контакты</li></a>
             </ul>
