--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>МегаПолис</title>
     <link rel="stylesheet" href="./main.css">
+    <link src="./bahnschrift.ttf" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <header>
